# custombreeze

./: AUTHORS  CMakeLists.txt  CustomConfig.cmake.in  KlassyConfig.cmake.in  README.md  breezeconfigurationui.ui  install.sh  kdev_execute.sh
kdecoration/: CMakeLists.txt  breeze.h  breeze.json  breezeappmenubuttongroup.cpp  breezeappmenubuttongroup.h  breezeappmenumodel.cpp  breezeappmenumodel.h  breezebutton.cpp  breezedecoration.cpp  breezedecoration.h  breezemenuoverflowbutton.cpp  breezemenuoverflowbutton.h  breezesettingsdata.kcfg  breezetextbutton.cpp  breezetextbutton.h
kdecoration/config/: breezeconfigwidget.cpp  breezeconfigwidget.h  breezeexceptionlistwidget.cpp  breezeexceptionmodel.cpp  customdecorationconfig.desktop
kdecoration/config/ui/: breezeconfigurationui.ui  buttonsizing.ui  customdecoration_config.qrc
kdecoration/libdbusmenuqt/: dbusmenuimporter.cpp
kstyle/: CMakeLists.txt  breeze.json  breezehelper.cpp  breezehelper.h  breezemetrics.h  breezeshadowhelper.h  breezestyle.cpp  breezestyle.h  breezestyleconfigdata.cpp  breezewindowmanager.cpp  custom.themerc  klassy.themerc
kstyle/config/: CMakeLists.txt  breezestyleconfig.cpp  breezestyleconfig.h  breezestyleconfigdata.cpp  breezestyleconfigdata.h  customstyleconfig.desktop  main.cpp
kstyle/config/ui/: breezestyleconfig.ui
libbreezecommon/: CMakeLists.txt  breeze.h  breezeboxshadowrenderer.h  renderdecorationbuttonicon.cpp  renderdecorationbuttonicon.h  setqdebug_logging.h  stylekite.cpp  stylekite.h  styleklassy.cpp  stylemacos.cpp  stylemacos.h  styleoxygen.cpp  styleredmond.cpp  styleredmond.h  styleredmond10.cpp  styleredmond10.h  stylesweet.cpp  stylesweet.h
